--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "files.associations": {
         "proc.h": "c",
         "defs.h": "c",
-        "syscall.h": "c"
+        "syscall.h": "c",
+        "spinlock.h": "c"
     }
 }
