--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "files.associations": {
         "buf.h": "c",
         "file.h": "c",
-        "fs.h": "c"
+        "fs.h": "c",
+        "syscall.h": "c"
     }
 }
